# DGtalTools-contrib

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  appveyor.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
.travis/: confCCLinux.sh  install_deps_macos.sh
Samples/: box.off  contourS.sdp  ellipseBruit.sdp  ellipseBruit2.sdp  fandisk.off  polygoneBruit.sdp  polygoneBruit2.sdp  skelet3D_vertex.sdp  sphere.off
cmake/: polyscope.cmake
geometry2d/: CMakeLists.txt  houghLineDetect.cpp  meaningFullThickness.cpp  rosinThreshold.cpp  rotNmap.cpp
geometry2d/distanceTransform/: CMakeLists.txt  CumulativeSequence.cpp  CumulativeSequence.h  CumulativeSequenceTest.cpp  D4DistanceDT.cpp  D4DistanceDT.h  D8DistanceDT.cpp  D8DistanceDT.h  ImageFilter.cpp  ImageFilter.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  LUTBasedNSDistanceTransform.cpp  LUTBasedNSDistanceTransformConfig.h  NeighborhoodSequenceDistance.cpp  NeighborhoodSequenceDistance.h  PBMImageReader.cpp  PBMImageReader.h  PGMImageWriter.cpp  PGMImageWriter.h  PNGImageReader.cpp  PNGImageReader.h  PNGImageWriter.cpp  PNGImageWriter.h  PeriodicNSDistanceDT.cpp  PeriodicNSDistanceDT.h  RatioNSDistanceDT.cpp  RatioNSDistanceDT.h  RationalBeattySequence.h  RationalBeattySequenceTest.cpp  sequenceTest.h
geometry3d/: CMakeLists.txt  basicEditMesh.cpp  basicMorphoFilter.cpp  compareErrorMesh.cpp  computeMeshDistances.cpp  graph2vol.cpp  meshAxisCutter.cpp  meshBasicEdit.cpp  meshTrunk2Pts.cpp  meshTrunkTransform.cpp  obj2off.cpp  off2obj.cpp  off2sdp.cpp  splitMeshFromCol.cpp  trunkMeshTransform.cpp  vol2meshAndNormals.cpp  volFillCCSize.cpp  volLocalMax.cpp  xyzScale.cpp
visualisation/: CMakeLists.txt  displayLineSegments.cpp  displaySet2dPts.cpp  displayTgtCoverAlphaTS.cpp  graphViewer.cpp  meshViewerEdit.cpp  meshViewerEdit.h  meshViewerEdit.ui  polyMeshColorize.cpp  polyMeshEdit.cpp
visualisation/compClass/: ViewerMesh.cpp  ViewerMesh.h
